# gtk4-python-app-packaging

./: .gitignore  README.md  meson.build
data/: idgaf.desktop
debian/: changelog  control  install  rules
idgaf/: __init__.py  __main__.py  app.py
scripts/: idgaf
